# quran-bot-v5

./: Cargo.toml  README.md
src/: lib.rs  main.rs
