[package]
name = "tw_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
oauth-client = "0.8.0"
oauth = { version = "0.6", package = "oauth1-request" }
serde = { version = "1.0.160", features = ["derive"] }
csv = "1.2.1"
rand = "0.8.5"
colored = "2.0.0"
oauth1-header = "0.1.0"
openssl = { version = "0.10.52", features = ["vendored"] }


